# code-compass

./: README.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy.yml
backend/: .env.example  .gitignore  pyproject.toml
backend/src/app/: custom_embedding.py  custom_splitter.py  custom_transformer.py  main.py  models.py  setup.py  store.py  utils.py
frontend/: .prettierrc.json  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/CodeSnippet/: CodeSnippet.tsx  code-snippet.css
frontend/src/components/CodeSnippetList/: CodeSnippetList.tsx  code-snippet-list.css
frontend/src/components/SearchBar/: SearchBar.tsx  search-bar.css
frontend/src/pages/Search/: Search.tsx  search.css
